Fixed mobile issue where the page would get cut off at the bottom

--- a/wwwroot/scss/mobile.scss
+++ b/wwwroot/scss/mobile.scss
@@ -26,7 +26,7 @@ input, #commentbox
 }
 #app 
 {
-	height: 50vh;
+	height: 80vh;
 	overflow: visible;
 }
 @media (min-width: 480px) and (max-width: 720px)
@@ -39,7 +39,7 @@ input, #commentbox
 	.container 
 	{
 		height: 100vh; /* screen height */
-		max-height: 65vh;
+		max-height: 90vh;
 		max-width: 100%;
 		top: 5%;
 		overflow: hidden;
@@ -96,7 +96,7 @@ input, #commentbox
     .container 
     {
         height: 100vh; /* screen height */
-        max-height: 65vh;
+        max-height: 90vh;
         max-width: 100%;
         top: 5%;
         overflow: hidden;
@@ -152,7 +152,7 @@ input, #commentbox
 	.container 
 	{
 		height: 100vh; /* screen height */
-		max-height: 65vh;
+		max-height: 90vh;
 		max-width: 100%;
 		top: 5%;
 		overflow: hidden;
@@ -210,7 +210,7 @@ input, #commentbox
     .container 
     {
         height: 100vh; /* screen height */
-        max-height: 65vh;
+        max-height: 90vh;
         max-width: 100%;
         top: 5%;
         overflow: hidden;
